tests/errors/unused-group.futil
component main() -> () {
  cells {}
  wires {
    group cond {
      cond[done] = 1'd1;
    }
  }
  control {}
}
