tests/errors/unused-group.expect
---CODE---
1
---STDERR---
Error: tests/errors/unused-group.futil
4 |    group cond {
  |    ^^^^^^^^^^^^ Unused group `cond'
